--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <hr>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<h3><a href="../2.4+Movie+Ranking+Project/"> my movie projects </a></h3>
-
-
+<h3><a href="./public/movie-ranking.html"> my movie projects </a></h3>
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
-<img src="./assets/images/movies.png" height=300/>
+<img src="./public/assets/images/movies.png" height=300/>
 <!-- TODO 4: Add titles/subtitles etc. -->
 
 <hr>
